--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
-.project
-.settings/
+############################################################
+# Filename .gitignore
+#
+# How to reproduce
+#   1) Go to https://www.gitignore.io/
+#   2) Enter the name of your IDE:  intellij
+#   3) Press Generate
+#
+# Created by using https://www.gitignore.io/api/intellij
+# And, then modified by me
+############################################################
+
+### Intellij ###
+.idea/*
+*.iml
+
+## File-based project format:
+*.iws
+
+## Plugin-specific files:
+/target/
+
+
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
