--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 # And, then modified by me
 ############################################################
 
+### Eclipse files ###
+.project
+
+
 ### Intellij ###
 .idea/*
 *.iml
