--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Ignore any vi .swp files
+*.swp
