--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,8 @@
 # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
-[*]
-end_of_line = lf
-insert_final_newline = true
-
-# Matches multiple files with brace expansion notation
-[*.{js,jsx,html,sass}]
+# Set the tab to be 4 spaces for these files types
+[*.{js,jsx,html,sass,txt}]
 charset = utf-8
 indent_style = tab
 indent_size = 4
